cloudid/k8s/outer/service-http-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudid-http-proxy
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: cloudid-http-proxy
