cloudid/k8s/outer/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cloudid-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: cloudid-http-proxy
          servicePort: 80
